# rustychat

./: Cargo.toml  README.md
scripts/: choose-model.sh  start-ollama.sh
src/: main.rs
